--- a/src/app/protected/cranix/system/status/create-support.html
+++ b/src/app/protected/cranix/system/status/create-support.html
@@ -1,7 +1,7 @@
 <form #supportTicket="ngForm">
     <ion-header translucent>
         <ion-toolbar>
-            <ion-title>{{  'Add new support'  | translate }}</ion-title>
+            <ion-title>{{'Add support' | translate }}</ion-title>
             <ion-buttons slot="end">
                 <ion-button class="ion-no-margin" (click)="onSubmit()" [disabled]="!supportTicket.valid">
                     <ion-icon slot="icon-only" color="success" name="checkmark-sharp"></ion-icon>
@@ -18,7 +18,7 @@
                 <ion-label position="stacked">{{'supporttype' | translate}}</ion-label>
                 <ion-select [(ngModel)]="support.supporttype" name="title" required>
                     <ion-select-option value="Error">{{ 'Error' | translate}}</ion-select-option>
-                    <ion-select-option value="Feeback">{{ 'Feeback' | translate}}</ion-select-option>
+                    <ion-select-option value="Feedback">{{ 'Feedback' | translate}}</ion-select-option>
                     <ion-select-option value="FeatureRequest">{{ 'FeatureRequest' | translate}}</ion-select-option>
                     <ion-select-option value="ProductOrder">{{ 'ProductOrder' | translate}}</ion-select-option>
                 </ion-select>
@@ -36,7 +36,7 @@
                 <ion-input [(ngModel)]="support.lastname" name="lastname" required></ion-input>
             </ion-item>
             <ion-item>
-                <ion-label position="stacked">{{'title' | translate}}</ion-label>
+                <ion-label position="stacked">{{'subject' | translate}}</ion-label>
                 <ion-input [(ngModel)]="support.subject" name="subject" required></ion-input>
             </ion-item>
             <quill-editor [styles]="{height: '250px'}" [(ngModel)]="support.description" 
