--- a/src/app/protected/cranix/security/firewall/firewall.component.html
+++ b/src/app/protected/cranix/security/firewall/firewall.component.html
@@ -176,7 +176,7 @@
         class="{{authService.settings.agGridThema}}" [rowData]="securityService.outgoingRules"
         [columnDefs]="outColumnDefs" [defaultColDef]="defaultColDef" [context]="context" rowSelection="multiple"
         [rowMultiSelectWithClick]="authService.settings.rowMultiSelectWithClick" (gridReady)="outGridReady($event)"
-        (selectionChanged)="outSelectionChanged()" [deltaColumnMode]="true" id="outGridTable">
+        (selectionChanged)="outSelectionChanged()" id="outGridTable">
       </ag-grid-angular>
       <ag-grid-angular *ngIf="segment == 'remote'" style="width: 100%; height: 100%;"
         class="{{authService.settings.agGridThema}}" [rowData]="securityService.remoteRules"
