--- a/src/app/protected/cephalix/institutes/lists/institutes-sync-objects.component.html
+++ b/src/app/protected/cephalix/institutes/lists/institutes-sync-objects.component.html
@@ -1,14 +1,14 @@
 <cranix-toolbar title="{{'Define synchronisation of objects for the selected institutes' | translate}}">
 </cranix-toolbar>
-<ion-title *ngIf="cephalixService.selectedInstitutes.length == 0">
+<ion-title *ngIf="objectService.selection.length == 0">
   {{'You have to select some institutes to be able to use this site.'}}
 </ion-title>
-<ion-segment  *ngIf="cephalixService.selectedInstitutes.length != 0" (ionChange)="segmentChanged($event)" color="secondary" value="User">
+<ion-segment  *ngIf="objectService.selection.length != 0" (ionChange)="segmentChanged($event)" color="secondary" value="User">
   <ion-segment-button *ngFor="let seg of objectsToSync" [value]="seg">
     <ion-label>{{ seg | translate}}</ion-label>
   </ion-segment-button>
 </ion-segment>
-<ion-content *ngIf="cephalixService.selectedInstitutes.length != 0">
+<ion-content *ngIf="objectService.selection.length != 0">
   <ion-toolbar>
     <ion-item>
       <ion-input placeholder="{{'search' | translate }}" (input)="onMemberFilterChanged()" id="memberFilter">
