--- a/src/app/protected/cephalix/institutes/lists/institutes.component.html
+++ b/src/app/protected/cephalix/institutes/lists/institutes.component.html
@@ -32,59 +32,6 @@
   </ag-grid-angular>
 </ion-content>
 
-<ion-searchbar *ngIf="authService.isMD()" placeholder="{{'search' | translate }}"
-  (input)="onQuickFilterChanged('institutesFilterMD')" id="institutesFilterMD" showCancelButton="never"></ion-searchbar>
 <ion-content *ngIf="authService.isMD()">
-  <ion-fab vertical="top" horizontal="end" slot="fixed">
-    <ion-fab-button size="small">
-      <ion-icon name="arrow-forward-circle"></ion-icon>
-    </ion-fab-button>
-    <ion-fab-list side="start">
-      <ion-fab-button>
-        <ion-icon name="ellipsis-vertical-sharp" (click)="openActions($event,null)"></ion-icon>
-      </ion-fab-button>
-      <ion-fab-button>
-        <ion-icon name="add-circle" (click)="redirectToEdit(null)"></ion-icon>
-      </ion-fab-button>
-      <ion-fab-button>
-        <ion-icon name="apps" (click)="openCollums($event)"></ion-icon>
-      </ion-fab-button>
-    </ion-fab-list>
-  </ion-fab>
-  <ion-list>
-    <ion-item *ngIf="rowData.length == 0">
-      <ion-label>
-        {{ 'Loading data ...' | translate }}
-      </ion-label>
-    </ion-item>
-    <ion-item-sliding *ngFor="let object of rowData">
-      <ion-item [color]="regcodeValid(object)" button (click)="redirectToEdit(object)">
-        <ion-note slot="start">
-          <ion-checkbox (click)="$event.stopPropagation()" (ionChange)="checkChange($event,object)"></ion-checkbox>
-        </ion-note>
-        <ion-label [color]="regcodeValid(object)">
-          <h3>{{ object.name }}</h3>
-          <h4>{{ object.regCode }}</h4>
-        </ion-label>
-        <ion-label>
-          <h4>{{ object.locality }}</h4>
-          <h4>{{ object.instituteType | translate }}</h4>
-        </ion-label>
-      </ion-item>
-      <ion-item-options side="end">
-        <ion-item-option color="danger" (click)="redirectToDelete(object)">
-          <ion-icon slot="icon-only" name="trash-outline"></ion-icon>
-        </ion-item-option>
-        <ion-item-option (click)="redirectToEdit(object)">
-          <ion-icon slot="icon-only" name="build-sharp"></ion-icon>
-        </ion-item-option>
-        <ion-item-option (click)="openActions($event,object)">
-          <ion-icon slot="icon-only" name="ellipsis-vertical-sharp"></ion-icon>
-        </ion-item-option>
-        <ion-item-option *ngIf="object.ipVPN && object.ipVPN != ''" color="secondary" (click)="routeInstitute(object)">
-          <ion-icon slot="icon-only" name="create-outline" style="height:15px;width:15px"></ion-icon>
-        </ion-item-option>
-      </ion-item-options>
-    </ion-item-sliding>
-  </ion-list>
+  <cranix-md-list objectType="institute" [context]="context"></cranix-md-list>
 </ion-content>
