--- a/src/app/protected/cranix/devices/lists/printers.component.html
+++ b/src/app/protected/cranix/devices/lists/printers.component.html
@@ -35,47 +35,6 @@
     (gridReady)="onGridReady($event)" id="agGridTable">
   </ag-grid-angular>
 </ion-content>
-<ion-searchbar *ngIf="authService.isMD()" placeholder="{{'search' | translate }}"
-  (input)="onQuickFilterChanged('printerFilterMD')" id="printerFilterMD" showCancelButton="never"></ion-searchbar>
 <ion-content *ngIf="authService.isMD()">
-  <ion-fab vertical="top" horizontal="end" slot="fixed">
-    <ion-fab-button size="small">
-      <ion-icon name="arrow-forward-circle"></ion-icon>
-    </ion-fab-button>
-    <ion-fab-list side="start">
-      <ion-fab-button>
-        <ion-icon name="ellipsis-vertical-sharp" (click)="openActions($event,null)"></ion-icon>
-      </ion-fab-button>
-      <ion-fab-button>
-        <ion-icon name="add-circle" (click)="addDevice($event)"></ion-icon>
-      </ion-fab-button>
-      <ion-fab-button>
-        <ion-icon name="print-outline" (click)="addPrinter($event)" disabled></ion-icon>
-      </ion-fab-button>
-    </ion-fab-list>
-  </ion-fab>
-  <ion-list>
-    <ion-item-sliding *ngFor="let object of rowData">
-      <ion-item button (click)="redirectToEdit(object)">
-        <ion-note slot="start">
-          <ion-checkbox (click)="$event.stopPropagation()" (ionChange)="checkChange($event,object)"></ion-checkbox>
-        </ion-note>
-        <ion-label>
-          <h3>{{ object.name }}</h3>
-        </ion-label>
-        <ion-label>
-          <h5>{{ object.model }}</h5>
-          <h5>{{ object.activeJobs }}</h5>
-        </ion-label>
-      </ion-item>
-      <ion-item-options side="end">
-        <ion-item-option color="danger" (click)="redirectToDelete(object)">
-          <ion-icon slot="icon-only" name="trash-outline"></ion-icon>
-        </ion-item-option>
-        <ion-item-option fill="clear" (click)="reset(object.id)">
-          <ion-icon slot="icon-only" name="refresh"></ion-icon>
-        </ion-item-option>
-      </ion-item-options>
-    </ion-item-sliding>
-  </ion-list>
+  <cranix-md-list objectType="printer" [context]="context"></cranix-md-list>
 </ion-content>
