--- a/src/app/protected/cranix/hwconfs/hwconfs.page.html
+++ b/src/app/protected/cranix/hwconfs/hwconfs.page.html
@@ -32,44 +32,6 @@
     (selectionChanged)="selectionChanged()">
   </ag-grid-angular>
 </ion-content>
-<ion-searchbar *ngIf="authService.isMD()" placeholder="{{'search' | translate }}"
-  (input)="onQuickFilterChanged('hwconfsFilterMD')" id="hwconfsFilterMD"></ion-searchbar>
 <ion-content *ngIf="authService.isMD()">
-  <ion-fab vertical="top" horizontal="end" slot="fixed">
-    <ion-fab-button size="small">
-      <ion-icon name="arrow-forward-circle"></ion-icon>
-    </ion-fab-button>
-    <ion-fab-list side="start">
-      <ion-fab-button>
-        <ion-icon name="ellipsis-vertical-sharp" (click)="openActions($event,null)"></ion-icon>
-      </ion-fab-button>
-      <ion-fab-button>
-        <ion-icon name="add-circle" (click)="redirectToEdit(null)"></ion-icon>
-      </ion-fab-button>
-    </ion-fab-list>
-  </ion-fab>
-  <ion-list>
-    <ion-item-sliding *ngFor="let object of rowData">
-      <ion-item button (click)="redirectToEdit(object)">
-        <ion-note slot="start">
-          <ion-checkbox (click)="$event.stopPropagation()" (ionChange)="checkChange($event,object)"></ion-checkbox>
-        </ion-note>
-        <ion-label>
-          <h3>{{ object.name }}</h3>
-        </ion-label>
-        <ion-label>
-          <h5>{{ object.description }}</h5>
-          <h5>{{ object.deviceType | translate }}</h5>
-        </ion-label>
-      </ion-item>
-      <ion-item-options side="end">
-        <ion-item-option color="danger" (click)="redirectToDelete(object)">
-          <ion-icon slot="icon-only" name="trash-outline"></ion-icon>
-        </ion-item-option>
-        <ion-item-option (click)="openActions($event,object)">
-          <ion-icon slot="icon-only" name="ellipsis-vertical-sharp"></ion-icon>
-        </ion-item-option>
-      </ion-item-options>
-    </ion-item-sliding>
-  </ion-list>
+  <cranix-md-list objectType="hwconf" [context]="context"></cranix-md-list>
 </ion-content>
