--- a/src/app/protected/cranix/mygroups/mygroups.page.html
+++ b/src/app/protected/cranix/mygroups/mygroups.page.html
@@ -14,8 +14,8 @@
       <ion-icon name="walk"></ion-icon>
     </ion-segment-button>
   </ion-segment>
-  <ion-item>
-    <ion-label *ngIf="gridApi && !authService.isMD()">
+  <ion-item *ngIf="!authService.isMD()">
+    <ion-label *ngIf="gridApi">
       #{{gridApi.getDisplayedRowCount()}}
     </ion-label>
     <ion-input placeholder="{{'search' | translate }}" (input)="onQuickFilterChanged('mygroupsFilter')"
@@ -45,7 +45,13 @@
     (selectionChanged)="selectionChanged()" (gridReady)="onGridReady($event)">
   </ag-grid-angular>
 </ion-content>
-<ion-content *ngIf="authService.isMD()">
+<ion-content *ngIf="authService.isMD() && segment == 'student'">
+  <cranix-md-list objectType="education/user" [context]="context"></cranix-md-list>
+</ion-content>
+<ion-content *ngIf="authService.isMD() && segment == 'group'">
+  <cranix-md-list objectType="education/group" [context]="context"></cranix-md-list>
+</ion-content>
+<ion-content *ngIf="authService.isMD() && segment == 'guest'">
   <ion-fab vertical="top" horizontal="end" slot="fixed">
     <ion-fab-button size="small">
       <ion-icon name="arrow-forward-circle"></ion-icon>
@@ -53,10 +59,6 @@
     <ion-fab-list side="start">
       <ion-fab-button (click)="openActions($event,null)">
         <ion-icon name="ellipsis-vertical-sharp"></ion-icon>
-      </ion-fab-button>
-      <ion-fab-button *ngIf="segment == 'group' || (segment == 'student' && authService.isAllowed('user.add.students'))"
-        (click)="redirectToEdit(null)">
-        <ion-icon name="add-circle"></ion-icon>
       </ion-fab-button>
       <ion-fab-button *ngIf="segment == 'guest'" (click)="addEditGuest(null)">
         <ion-icon name="add-circle"></ion-icon>
@@ -69,16 +71,8 @@
         <ion-note slot="start">
           <ion-checkbox (click)="$event.stopPropagation()" (ionChange)="checkChange($event,object)"></ion-checkbox>
         </ion-note>
-        <ion-label *ngIf="segment != 'student'">
+        <ion-label>
           <h3>{{ object.name }}</h3>
-        </ion-label>
-        <ion-label *ngIf="segment == 'student'">
-          <h3>{{ object.surName }}, {{ object.givenName }}, ( {{ object.uid }} )</h3>
-          <h5>{{ object.groupName }}</h5>
-        </ion-label>
-        <ion-label *ngIf="segment == 'group'">
-          <h5>{{ object.description }}</h5>
-          <h5>{{ object.groupType | translate }}</h5>
         </ion-label>
       </ion-item>
       <ion-item-options
