--- a/src/app/protected/cranix/rooms/lists/rooms.component.html
+++ b/src/app/protected/cranix/rooms/lists/rooms.component.html
@@ -30,52 +30,6 @@
     (selectionChanged)="selectionChanged()" (gridReady)="onGridReady($event)">
   </ag-grid-angular>
 </ion-content>
-<ion-searchbar *ngIf="authService.isMD()" placeholder="{{'search' | translate }}"
-  (input)="onQuickFilterChanged('roomsFilterMD')" id="roomsFilterMD" showCancelButton="never"></ion-searchbar>
 <ion-content *ngIf="authService.isMD()">
-  <ion-fab vertical="top" horizontal="end" slot="fixed">
-    <ion-fab-button size="small">
-      <ion-icon name="arrow-forward-circle"></ion-icon>
-    </ion-fab-button>
-    <ion-fab-list side="start">
-      <ion-fab-button (click)="openActions($event,null)">
-        <ion-icon name="ellipsis-vertical-sharp"></ion-icon>
-      </ion-fab-button>
-      <ion-fab-button (click)="redirectToEdit(null)">
-        <ion-icon name="add-circle"></ion-icon>
-      </ion-fab-button>
-    </ion-fab-list>
-  </ion-fab>
-  <ion-list>
-    <ion-item-sliding *ngFor="let object of rowData">
-      <ion-item button (click)="redirectToEdit(object)">
-        <ion-note slot="start">
-          <ion-checkbox (click)="$event.stopPropagation()" (ionChange)="checkChange($event,object)"></ion-checkbox>
-        </ion-note>
-        <ion-label>
-          <h3>{{ object.name }}</h3>
-          <h5>{{ object.description }}</h5>
-        </ion-label>
-        <ion-label>
-          <h5>{{ object.roomType | translate }}</h5>
-          <h5>{{ object.roomControl | translate }}</h5>
-          <h5 *ngIf="object.hwconfId">{{ object.hwconfId | idToName:'hwconf' }}</h5>
-        </ion-label>
-      </ion-item>
-      <ion-item-options side="end">
-        <ion-item-option color="warning" (click)="setDhcp(object)">
-          <ion-icon slot="icon-only" name="server"></ion-icon>
-        </ion-item-option>
-        <ion-item-option color="danger" (click)="redirectToDelete(object)">
-          <ion-icon slot="icon-only" name="trash-outline"></ion-icon>
-        </ion-item-option>
-        <ion-item-option (click)="setPrinters(object)">
-          <ion-icon slot="icon-only" name="print"></ion-icon>
-        </ion-item-option>
-        <ion-item-option (click)="devices(object)">
-          <ion-icon slot="icon-only" name="desktop"></ion-icon>
-        </ion-item-option>
-      </ion-item-options>
-    </ion-item-sliding>
-  </ion-list>
+  <cranix-md-list objectType="room" [context]="context"></cranix-md-list>
 </ion-content>
