--- a/src/app/protected/cranix/users/lists/users.component.html
+++ b/src/app/protected/cranix/users/lists/users.component.html
@@ -30,58 +30,6 @@
     (gridReady)="onGridReady($event)" (selectionChanged)="selectionChanged()" id="agGridTable">
   </ag-grid-angular>
 </ion-content>
-<ion-item *ngIf="authService.isMD()">
-  <ion-button size="small" fill="clear" (click)="back()" [disabled]="min < 0">
-    <ion-icon slot="icon-only" name="arrow-back"></ion-icon>
-  </ion-button>
-  {{ min +1 }}
-  <ion-searchbar  placeholder="{{'search' | translate }}" (input)="onQuickFilterChanged('usersFilterMD')"
-  id="usersFilterMD" showCancelButton="never"></ion-searchbar>
-  {{ max - 1 }}
-  <ion-button size="small" fill="clear" (click)="forward()" [disabled]="max > rowData.length">
-    <ion-icon slot="icon-only" name="arrow-forward"></ion-icon>
-  </ion-button>
-</ion-item>
 <ion-content *ngIf="authService.isMD()">
-  <ion-fab vertical="top" horizontal="end" slot="fixed">
-    <ion-fab-button size="small">
-      <ion-icon name="arrow-forward-circle"></ion-icon>
-    </ion-fab-button>
-    <ion-fab-list side="start">
-      <ion-fab-button (click)="openActions($event,null)">
-        <ion-icon name="ellipsis-vertical-sharp"></ion-icon>
-      </ion-fab-button>
-      <ion-fab-button (click)="redirectToEdit(null)">
-        <ion-icon name="add-circle"></ion-icon>
-      </ion-fab-button>
-    </ion-fab-list>
-  </ion-fab>
-  <ion-list>
-    <ion-item-sliding *ngFor="let object of rowData; let i = index">
-      <ion-item *ngIf="i > min && i < max" button (click)="redirectToEdit(object)">
-        <ion-note slot="start">
-          <ion-checkbox (click)="$event.stopPropagation()" (ionChange)="checkChange($event,object)"></ion-checkbox>
-        </ion-note>
-        <ion-label>
-          <h3>{{ object.uid }}</h3>
-          <h5>{{ object.surName }} {{ object.givenName }}</h5>
-        </ion-label>
-        <ion-label>
-          <h5>{{ object.role | translate }}</h5>
-          <h5>{{ object.classes }}</h5>
-        </ion-label>
-      </ion-item>
-      <ion-item-options side="end">
-        <ion-item-option color="danger" (click)="redirectToDelete(object)">
-          <ion-icon slot="icon-only" name="trash-outline"></ion-icon>
-        </ion-item-option>
-        <ion-item-option (click)="redirectToGroups(object)">
-          <ion-icon slot="icon-only" name="people"></ion-icon>
-        </ion-item-option>
-        <ion-item-option (click)="openActions($event,object)">
-          <ion-icon slot="icon-only" name="ellipsis-vertical-sharp"></ion-icon>
-        </ion-item-option>
-      </ion-item-options>
-    </ion-item-sliding>
-  </ion-list>
+  <cranix-md-list objectType="user" [context]="context"></cranix-md-list>
 </ion-content>
