--- a/src/app/protected/toolbar/toolbar.component.html
+++ b/src/app/protected/toolbar/toolbar.component.html
@@ -6,10 +6,10 @@
       </ion-menu-button>
     </ion-buttons>
     <ion-title *ngIf="!authService.isMD()">
-      {{authService.session.commonName}} {{authService.session.instituteName}} {{authService.session.roomName}} <span class="title-class">{{title}}</span>
+      {{authService.session.fullName}} {{authService.session.instituteName}} {{authService.session.roomName}} <span class="title-class">{{title}}</span>
     </ion-title>
     <ion-title *ngIf="authService.isMD()">
-      {{authService.session.commonName}} {{authService.session.instituteName}} {{authService.session.roomName}}
+      {{authService.session.fullName}} {{authService.session.instituteName}} {{authService.session.roomName}}
     </ion-title>
     <ion-buttons slot="end">
       <ion-button fill="clear" (click)="objectService.initialize(true)"
